# ChatBOT

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .replit  2025-10-21-command-messageinit-is-analyzing-your-codebase.txt  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_VPS.md  Dockerfile  MIGRATION.md  PROJECT_HEALTH_REPORT.md  QUICKSTART.md  RAG_ISSUE_REPORT.md  README.md  README_DASHBOARD.md  README_IMPORTADOR.md  backup.sh  bot_data.db  database.py  docker-compose.monitoring.yml  docker-compose.yml  import_documents.py  main.py  portainer-stack.yml  prometheus.yml  pyproject.toml  replit.md  stack.deploy.sh  start_dashboard.sh  vector_db.py
.github/: .coderabbit.yaml  PULL_REQUEST_TEMPLATE.md  SETUP_SUMMARY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-update.yml  release.yml
.local/state/replit/agent/filesystem/: filesystem_state.json
chroma_db/: chroma.sqlite3
scripts/: import_documents.py
src/: __init__.py
src/admin_dashboard/: README.md  __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/admin_dashboard/admin_panel/: __init__.py  admin.py  apps.py  bot_manager.py  models.py  urls.py  views.py
src/admin_dashboard/admin_panel/management/commands/: create_admin.py
src/admin_dashboard/admin_panel/static/css/: style.css
src/admin_dashboard/admin_panel/static/js/: dashboard.js
src/admin_dashboard/admin_panel/templates/: base.html  dashboard.html  embeddings.html  login.html  logs.html
src/discord_bot/: __init__.py
src/discord_bot/bot/: __init__.py  ai_client.py  client.py  commands.py
src/discord_bot/config/: __init__.py  settings.py
src/discord_bot/database/: __init__.py  sqlite_db.py
src/discord_bot/rag/: __init__.py  vector_store.py
src/discord_bot/utils/: logging_config.py
(+3 files in other folders)
