[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
discord-py = "^2.3.2"
aiohttp = "^3.9.0"
chromadb = "^0.5.0"
python-docx = "^1.2.0"
docx2txt = "^0.9"
fitz = "^0.0.1.dev2"
sentence-transformers = "^5.1.1"
docx = "^0.2.4"
openai = "^2.6.0"
pymupdf = "^1.26.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"